@@ -8,6 +8,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 
 ## v2.10.3.6 Change Log - Release Candidate 3 (rc3) - includes rc1+rc2 changes
 - [fix] history left axis would incorrectly limit min to -100.0 on startup
+- [fix] changed legacy spot telnet connect to use UInt16 (unsigned 16 bit) for port number allowing 0-65535. Previously it used signed 16 bit preventing any port over 32767 from being used
 
 ## v2.10.3.6 Change Log - Release Candidate 2 (rc2) - includes rc1 changes
 - [fix] fix missing legacy buttons that happened in rare cases
